--- a/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
+++ b/src/widgets/SideBar/ui/SideBar/SideBar.module.scss
@@ -14,6 +14,7 @@
   position: absolute;
   bottom: 20px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   width: 100%;
 }
